# otedama

./: .gitignore  Cargo.toml  README.md  main.rs
.github/: pull_request_template.md
APIClient/: Cargo.toml
APIServer/: .環境構築手順.md.swp  APIServer構築手順.md  COMMIT_METHOD.md  Cargo.toml  DBCargo.toml  README.md  main.rs  websocket.rs  websocket.service  構築手順  環境構築手順.md  環境構築手順（パッケージからのテスト用）.md  環境構築手順（中村くんテスト用）.md  環境構築手順（中村くんテスト用）.md.save
APIServer/APIClient/: Cargo.toml
APIServer/APIClient/src/: main.rs
APIServer/APIServer/: Cargo.toml  Dockerfile  Dockerfile.base
APIServer/APIServer/src/: connect.rs  main.rs  monitor.rs  monitoring.rs  websocket.rs
APIServer/APIServerTestClient/: APIServerTestClient構築手順.md  Cargo.toml
APIServer/APIServerTestClient/src/: main.rs
APIServer/src/: main.rs  websocket.rs
DB/: cassandra.yaml
DBServer/: .環境構築手順.md.swp  CreateKeyspace.cql  CreateTable.cql  DBServer外部接続環境構築  DBServer構築手順.md  cassandra.repo  cassandra.yaml  create_database.cql  create_keyspace.cql  create_table.cql  keyspace  table  構築手順  環境構築手順.md
Management/: .データベース・VPN初期化手順.md.swp  SSH環境構築手順.md  compose実行前実施コマンド.sh  サーバ保守ログイン手順.md  データベース・VPN・Proxy初期化手順.md  データベース・VPN初期化手順.md  環境構築手順.md
ManagementServer/: SSH環境構築手順.md  サーバ保守ログイン手順.md  環境構築手順.md
MonitoringLogServer/: blackbox.yml  config.yml  prometheus.yml
ProxyServer/: Cargo.toml  Dockerfile  Dockerfile.base  docker-compose.yml  haproxy.cfg  main.rs  環境構築手順.md
ServerMonitor/: Cargo.toml
VPNServer/: .環境構築手順.md.swp  Cargo.toml  Dockerfile  Dockerfile.base  VPNServer構築手順.md  headler.rs  main.rs  (+4 more)
(+98 files in other folders)
