[package]
name = "apiserver"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
cassandra-cpp = "0.16.0"
tokio-tungstenite = { version = "0.15", features = ["tokio"] }
